...
    return Container(
      child: Column(
        crossAxisAlignment: CrossAxisAlignment.start,
        children: <Widget>[
           Text(
              "Welcome",
              key: Key("welcome-text"),
              style: TextStyle(
                fontSize: 17.0,
                letterSpacing: 2.0,
                color: Colors.grey[700],
              ),
            ),
...
